<resources>
    <string name="app_name">miscosUIProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role_project_manager">Role : Project Manager</string>
    <string name="create">Create</string>
    <string name="existing_roles">Existing Roles</string>
    <string name="gis_drone">GIS,Drone</string>
    <string name="head_of_department">Head Of Department</string>
    <string name="existing_roles2">Existing Roles</string>
    <string name="roles">Roles</string>
    <string name="roles_and_responsibilities">Roles and Responsibilities</string>
    <string name="email">Email</string>
    <string name="verify_with_otp">Verify With OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="please_enter_new_employee_details">Please Enter new Employee Details :</string>
    <string name="employee_onboarding">Employee Onboarding</string>
    <string name="employee">Employee</string>
    <string name="add">Add</string>
    <string name="ayush_saxena">Ayush Saxena</string>
    <string name="assign_roles">Assign Roles</string>
    <string name="suraj_suryavanshi">Suraj Suryavanshi</string>
    <string name="sushant_iyengar">Sushant iyengar</string>
    <string name="sachin_anarthe">Sachin Anarthe</string>
    <string name="smitha_pawar">Smitha Pawar</string>
    <string name="please_assign_the_roles_multi_selectable_at_least_select_one">Please Assign the Roles (Multi Selectable) At least Select One :</string>
    <string name="allocated_to_project_managers">Allocated To Project Managers</string>
    <string name="management_finance">Management - Finance</string>
    <string name="management_admin">Management - Admin</string>
    <string name="management_project">Management - Project</string>
    <string name="project_authority">Project Authority</string>
    <string name="project_manager">Project Manager</string>
    <string name="employee_under_department">Employee Under Department</string>
    <string name="employee_under_project_manager">Employee Under Project Manager</string>
    <string name="human_resources">Human Resources</string>
    <string name="select_roles">Select Roles</string>
</resources>