<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#344771"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/closeImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/allocated_to_project_managers"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
        <ScrollView
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/grey_90"
                        android:layout_marginBottom="10dp"
                        android:text="@string/please_assign_the_roles_multi_selectable_at_least_select_one"
                        />
                    <LinearLayout
                        android:id="@+id/checkboxLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>


                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/ayush_saxena" />

                    <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/smitha_pawar" />

                    <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/sachin_anarthe" />

                    <CheckBox
                        android:id="@+id/checkbox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/sushant_iyengar" />

                    <CheckBox
                        android:id="@+id/checkbox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/suraj_suryavanshi" />



                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/assignRolesBtn"
                        android:text="@string/assign_roles"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/orange_400"
                        android:textAllCaps="false"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </RelativeLayout>
            <!-- Add more checkboxes as needed -->

        </ScrollView>
    </RelativeLayout>

</FrameLayout>